Update to slick 2.1.0-M2